--- a/hardahat/package.json
+++ b/hardahat/package.json
@@ -5,10 +5,11 @@
     "chai": "^4.3.7",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.7.2",
-    "hardhat": "^2.9.9"
+    "hardhat": "^2.14.0"
   },
   "dependencies": {
     "@chainlink/contracts": "^0.6.1",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@openzeppelin/contracts": "^4.8.3"
   }
 }
