--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
     "alchemy-sdk": "^2.8.3",
     "env": "^0.0.2",
     "ethers": "^5.7.2",
+    "framer-motion": "^10.12.16",
     "json-loader": "^0.5.7",
     "moralis": "^2.21.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.4.3",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "use-nft": "^0.12.0",
