--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "env": "^0.0.2",
     "ethers": "^5.7.2",
     "framer-motion": "^10.12.16",
+    "graphql": "^16.6.0",
     "json-loader": "^0.5.7",
     "moralis": "^2.21.0",
     "react": "^18.2.0",
@@ -19,6 +20,7 @@
     "react-intersection-observer": "^9.4.3",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "urql": "^4.0.3",
     "use-nft": "^0.12.0",
     "web-vitals": "^2.1.4",
     "web3modal": "^1.9.12"
