--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@urql/core": "^4.0.10",
     "@walletconnect/web3-provider": "^1.8.0",
     "alchemy-sdk": "^2.8.3",
     "env": "^0.0.2",
